web/airflow-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: airflow-web
  name: airflow-web
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: airflow-web
      release: airflow
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: fd949609960165c4794623fa0dd76259b49687506f0306783511ae06f7a59bb7
        configmap.fabric8.io/update-on-change: airflow-env
      labels:
        app: airflow-web
        release: airflow
    spec:
      containers:
      - args:
        - webserver
        image: ${AIRFLOW_IMAGE}
        imagePullPolicy: Never
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: webserver
        #securityContext:
        #  privileged: true
        ports:
        - containerPort: 8080
          name: webserver
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        #- mountPath: /config
        #  name: airflow-config
        - mountPath: ${AIRFLOW_HOME}/airflow.cfg
          name: airflow-config
          subPath: airflow.cfg
        - mountPath: ${AIRFLOW_HOME}/webserver_config.py
          name: webserver-config
        #- mountPath: ${AIRFLOW_HOME}/dags
        #  name: airflow-dags
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: airflow-config
        name: airflow-config
      - name: webserver-config
        secret:
          defaultMode: 420
          secretName: webserver-config
      - configMap:
          defaultMode: 420
          name: airflow-init
        name: init-airflow
      #- emptyDir: {}
      #  name: airflow-dags
